[gd_scene load_steps=19 format=2]

[ext_resource path="res://textures/player/PlayerBody.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://objects/Muzzle.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/core/Colors.tscn" type="PackedScene" id=5]
[ext_resource path="res://objects/core/Score.tscn" type="PackedScene" id=6]
[ext_resource path="res://textures/vanity/Explosion.png" type="Texture" id=7]
[ext_resource path="res://textures/lighting/light.png" type="Texture" id=8]
[ext_resource path="res://objects/vanity/Damaged.tscn" type="PackedScene" id=9]
[ext_resource path="res://objects/Buff.tscn" type="PackedScene" id=10]
[ext_resource path="res://scripts/vanity/BuffSprite.gd" type="Script" id=11]
[ext_resource path="res://textures/vanity/VanityBuff.png" type="Texture" id=12]
[ext_resource path="res://scripts/vanity/BuffLight.gd" type="Script" id=13]
[ext_resource path="res://scripts/vanity/VanitySprite.gd" type="Script" id=14]

[sub_resource type="CircleShape2D" id=4]
radius = 28.0

[sub_resource type="CircleShape2D" id=5]
radius = 31.0644

[sub_resource type="CircleShape2D" id=8]
radius = 27.074

[sub_resource type="OccluderPolygon2D" id=7]
polygon = PoolVector2Array( -21, -21, 21, -21, 21, 21, -21, 21, -21, 15, -27, 15, -27, 12, -28, 12, -28, -12, -27, -12, -27, -15, -21, -15 )

[node name="Player" type="KinematicBody2D" groups=["player"]]
position = Vector2( 4, 4 )
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 1 )

[node name="VanitySprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
z_index = 182
texture = ExtResource( 1 )
script = ExtResource( 14 )

[node name="Tween" type="Tween" parent="VanitySprite"]

[node name="Explode" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -2.985, 1.113 )
z_index = 5
texture = ExtResource( 7 )

[node name="Tween" type="Tween" parent="Explode"]

[node name="Damaged" parent="." instance=ExtResource( 9 )]
z_index = 20
texture = ExtResource( 1 )

[node name="BuffSprite" type="Sprite" parent="."]
visible = false
light_mask = 16
position = Vector2( -3, 1 )
scale = Vector2( 2, 2 )
z_index = 1516
texture = ExtResource( 12 )
script = ExtResource( 11 )

[node name="Tween" type="Tween" parent="BuffSprite"]

[node name="Hitbox" type="Area2D" parent="."]
collision_mask = 2

[node name="HitboxCollision" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -3, 1 )
shape = SubResource( 4 )

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -3, 1 )
shape = SubResource( 5 )

[node name="Muzzle" parent="." instance=ExtResource( 3 )]

[node name="Timer" type="Timer" parent="Muzzle"]
wait_time = 0.12
one_shot = true

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 10

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )

[node name="Colors" parent="." instance=ExtResource( 5 )]

[node name="Score" parent="." instance=ExtResource( 6 )]

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Dash" type="Timer" parent="."]
wait_time = 0.07
one_shot = true

[node name="BuffLight" type="Light2D" parent="."]
z_index = 125
texture = ExtResource( 8 )
texture_scale = 0.81
color = Color( 1, 0, 0, 0 )
shadow_enabled = true
script = ExtResource( 13 )

[node name="Tween" type="Tween" parent="BuffLight"]

[node name="Light" type="Light2D" parent="."]
texture = ExtResource( 8 )
texture_scale = 1.49
color = Color( 1, 1, 1, 0.0980392 )
energy = 1.89
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )

[node name="Tween" type="Tween" parent="Light"]

[node name="Occlusion" type="LightOccluder2D" parent="."]
light_mask = 2
occluder = SubResource( 7 )
light_mask = 2

[node name="OnEquipCooldown" type="Timer" parent="."]
one_shot = true

[node name="Buff" parent="." instance=ExtResource( 10 )]

[node name="Listener" type="Listener2D" parent="."]
current = true

[connection signal="tween_all_completed" from="BuffSprite/Tween" to="BuffSprite" method="_on_Tween_tween_all_completed"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="health_changed" from="Stats" to="." method="_on_Stats_health_changed"]
[connection signal="timeout" from="Dash" to="." method="_on_Dash_timeout"]
